[gd_scene load_steps=3 format=3 uid="uid://d0fdst08mrgk5"]

[ext_resource type="Script" uid="uid://dsgr1ongq21c6" path="res://scenes/title_screen/title_screen.gd" id="1_4f7n1"]
[ext_resource type="PackedScene" uid="uid://ckmq8b7e6s3m2" path="res://scenes/main_scene/main_scene.tscn" id="2_bhe1c"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4f7n1")
main_scene = ExtResource("2_bhe1c")
metadata/_edit_use_anchors_ = true

[node name="GameTitleLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00086805556
anchor_top = 0.086419754
anchor_right = 0.9991319
anchor_bottom = 0.23941977
offset_bottom = -0.14400482
grow_horizontal = 2
theme_override_colors/default_color = Color(0.988088, 0.367419, 0.189237, 1)
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[pulse]Game Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -100.0
offset_right = 128.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGameButton" type="Button" parent="ButtonVBox"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="ButtonVBox"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Settings"

[node name="AboutGameButton" type="Button" parent="ButtonVBox"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "About Game"

[node name="ExitGameButton" type="Button" parent="ButtonVBox"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="ButtonVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="ButtonVBox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ButtonVBox/AboutGameButton" to="." method="_on_about_game_button_pressed"]
[connection signal="pressed" from="ButtonVBox/ExitGameButton" to="." method="_on_exit_game_button_pressed"]
